# codemind-AI-Codebase-Assistant

./: .env  Makefile  pyproject.toml
api/: app.py
api/ai/search/: search.py  validators.py
app/: main.py
app/chroma_db/: chroma.sqlite3
app/config/: app_config.py
app/docgen/: generator.py  writer.py
app/embeddings/: embedder.py  validators.py
app/ingestion/: __init__.py  file_reader.py  parser.py  validators.py
app/qa/: answers.py  retriever.py  validators.py
app/registry/: instances.py
app/utils/: id_generator.py
app/vectorstore/: chroma_store.py
docs/: AWSIPInfo.md  AWSMetricDataHandler.md  AddressIdentifierService.md  AppSelfLink.md  AppSyncConfigRule.md  AsyncQueueForwarder.md  AzureConfigEventBase.md  AzureConfigNormalizer.md  AzureEventNormalizer.md  AzureEventRule.md  AzureIPInfo.md  AzureMetricDataHandler.md  ChangeAppObjectExporterToContainer.md  ChangeExporterIdentifiers.md  ChangeServiceDiscoveryVMInstance.md  CloudService.md  ConfigEventIngester.md  ContainerConfigEventHandler.md  ContainerLinkRule.md  DataStream.md  DeleteEventSubRule.md  DnsIPMapper.md  ElbConfigEventRule.md  EndPointAddressMappingRule.md  EndpointTargetsContainerRule.md  Enricher.md  EnricherPartitioner.md  EventObjectHandler.md  EventRule.md  FaaSConfigRule.md  FlowMetricRule.md  GCPConfigNormalizer.md  GCPIPInfo.md  GCPMetricDataHandler.md  HostMetricRule.md  IBMTivoliEventNormalizer.md  IPMEventNormalizer.md  IPMEventRule.md  Info.md  Ingester.md  (+29 more)
