[project]
name = "codebase"
version = "0.1.0"
description = "it generate code base documents"
authors = [
    {name = "karthickshanmugam",email = "karthick.shanmugam@virtana.com"}
]
requires-python = ">=3.10,<3.14"


dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "tree-sitter (>=0.25.2,<0.26.0)",
    "tree-sitter-java (>=0.23.5,<0.24.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-google-genai (>=4.2.1,<5.0.0)",
    "chromadb (>=1.5.2,<2.0.0)",
    "fastapi (>=0.135.0,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
